engine-net-2/examples/Errors/MatchClassNotImplementedErrorCompiled.grg
#include "Rules.grg"

sequence s1
{
	 {{ [?[r(null)]\<class mc>] }}
}
